--- a/app/templates/longform/longform_post.html
+++ b/app/templates/longform/longform_post.html
@@ -25,14 +25,18 @@
             {% if author.salutation %}{{ author.salutation }} {% endif %}{{ author.first_name }} {{ author.last_name }}{% if author.job_title %} ({{ author.job_title }}){% endif %}{% if not forloop.last %}, {% endif %}
           {% endfor %}
 
-	  <div style='border:1px solid black;'>
-            <h2>Table of Contents</h2>
-	    {% for name, anchor in toc %}
-              <a href='#{{anchor}}'>{{name}}</a><br>
-            {% endfor %}
-  	  </div>
+      <hr class="nhsuk-section-break nhsuk-section-break--l nhsuk-section-break--visible">
+
+	    <nav class="nhsuk-contents-list" role="navigation" aria-label="Sections in this page">
+          <h2>Table of Contents</h2>
+          <ol class="nhsuk-contents-list__list">
+          {% for name, anchor in toc %}
+          <li class="nhsuk-contents-list__item"><a class="nhsuk-contents-list__link" href='#{{anchor}}'>{{name}}</a></li>
+          {% endfor %}
+          </ol>
+  	  </nav>
           
-	  <hr class="nhsuk-section-break nhsuk-section-break--l nhsuk-section-break--visible">
+	    <hr class="nhsuk-section-break nhsuk-section-break--l nhsuk-section-break--visible">
 	  
 
           {% for block in page.body %}
